tests/field/set_on_int.rev
123.bar = 4 // error: decimal part is not a number
